--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.2.9",
     "@angular/router": "~11.2.9",
     "@stomp/stompjs": "^6.1.0",
+    "bootstrap": "^5.0.1",
     "rxjs": "~6.6.0",
     "sockjs-client": "^1.5.1",
     "tslib": "^2.0.0",
